--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-huggingface_hub==0.25.2
+huggingface_hub>=0.28.1
+gradio>=5.38.0
+openai>=1.0.0
+python-dotenv>=0.19.0
+requests>=2.25.0
+pathlib
+markdown>=3.8.2
+presidio_analyzer
+presidio_anonymizer
