--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 huggingface_hub>=0.28.1
-gradio>=5.38.0
+gradio==5.34.2
 openai>=1.0.0
 python-dotenv>=0.19.0
 requests>=2.25.0
@@ -7,3 +7,4 @@ pathlib
 markdown>=3.8.2
 presidio_analyzer
 presidio_anonymizer
+pydantic==2.10.6
