--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
+# OpenAI Configuration
 OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_API_BASE=https://chat-ai.academiccloud.de/v1
 OPENAI_DEFAULT_MODEL=gemma-3-27b-it
-SPACY_DE_MODEL=de_core_news_sm
+
+# spaCy Model Configuration
+SPACY_DE_MODEL=de_core_news_lg
+SPACY_DATA_DIR=/app/spacy_models
+
+# Gradio Server Configuration (for Docker)
+GRADIO_SERVER_NAME=0.0.0.0
+GRADIO_SERVER_PORT=7860
