Add image and container name for moomootscribe service in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.8"
 
 services:
     moomootscribe:
+        image: pascalhuerten/moomootscribe:latest
+        container_name: moomootscribe
         build: .
         ports:
             - "7860:7860"
