Try fix 403 on generated images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         volumes:
             # Persistent storage for resources folder
             - ./resources:/app/resources
+            - ./prompts:/app/prompts
             # Optional: Mount .env file for environment variables
             - ./.env:/app/.env:ro
         environment:
