Fix image serving 2

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SPACY_DATA_DIR=/app/spacy_models
 # Gradio Server Configuration (for Docker)
 GRADIO_SERVER_NAME=0.0.0.0
 GRADIO_SERVER_PORT=7860
+GRADIO_BASE_URL=http://127.0.0.1:7860
