--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         environment:
             - GRADIO_SERVER_NAME=0.0.0.0
             - GRADIO_SERVER_PORT=7860
+            - GRADIO_BASE_URL=http://127.0.0.1:7860
         restart: unless-stopped
         healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:7860/"]
