feat: Enhance GDPR compliance features and improve transcription handling
- Added HTML escaping for entity attributes in GDPR highlights to ensure safety.
- Updated spaCy model loading to be lazy and handle errors gracefully.
- Improved transcription file handling by converting .srt/.vtt files to .txt format and enhancing error handling.
- Introduced new methods for converting subtitle formats and formatting plain text.
- Created a new Docker Compose file for development setup and adjusted existing Docker configurations for user permissions.
- Enhanced the summary prompt to include metadata and learning objectives.
- Implemented a new entrypoint script to manage spaCy model installation and environment variable loading.
- Added JavaScript for handling GDPR entity links in the UI, allowing for better interaction with highlighted text.
- Updated CSS for improved readability and styling of the UI components.
- Enhanced the generator tab to extract and render markdown content from results.
- Added help text and improved the UI for GDPR entity replacement in the transcription tab.
- Implemented functionality to apply replacements for detected GDPR entities in the transcription text.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
-version: "3.8"
-
 services:
     moomootscribe:
         image: pascalhuerten/moomootscribe:latest
         container_name: moomootscribe
         build: .
-        user: "1000:1000" # Ensure proper user mapping for file permissions
+        user: "${HOST_UID:-1000}:${HOST_GID:-1000}" # Ensure proper user mapping for file permissions
         ports:
             - "7860:7860"
         volumes:
@@ -14,6 +12,9 @@ services:
             - ./prompts:/app/prompts
             # Optional: Mount .env file for environment variables
             - ./.env:/app/.env:ro
+        environment:
+            HOST_UID: ${HOST_UID:-1000}
+            HOST_GID: ${HOST_GID:-1000}
         restart: unless-stopped
         healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:7860/"]
