Add inline help sections and improve file handling across various tabs
- Introduced help accordions in BaseGeneratorTab, GeneratorTab, ImageGeneratorTab, TalkSetupTab, and TranscriptionTab to guide users on functionality and internal processes.
- Updated file selection components to restrict input to .md and .txt formats in BaseGeneratorTab.
- Enhanced the GeneratorTab with detailed instructions on usage and processing steps.
- Implemented cover image saving functionality in ImageGeneratorTab, allowing users to select and save generated images as covers.
- Added audio file upload and transcription capabilities in TranscriptionTab, including integration with OpenAI Whisper for audio processing.
- Improved error handling and user feedback for file operations and API interactions.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,6 +11,7 @@ ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     curl \
+    ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
 # copy only requirements and install
