feat: Enhance TalkManager and TranscriptionService for audio handling and metadata updates
- Added audio file conversion to FLAC format in TalkManager before metadata update.
- Improved safe name generation method to handle unicode and special characters.
- Introduced segmenting functionality in TranscriptionService for FLAC files.
- Updated prompts for image generation, social media posts, and summaries to improve clarity and structure.
- Removed outdated metadata prompt.
- Refactored UI components to reflect application name change from MooMoot Scribe to SummarAIzer.
- Added a new Quick Generation tab for streamlined content generation.
- Adjusted image generation parameters for better output quality.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_API_BASE=https://chat-ai.academiccloud.de/v1
 OPENAI_DEFAULT_MODEL=gemma-3-27b-it
+AUDIO_FLAC_COMPRESSION_LEVEL=10
+TRANSCRIBE_SEGMENT_SECONDS=250
+OPENAI_TRANSCRIBE_TEMPERATURE=0.3
 
 # spaCy Model Configuration
 SPACY_DE_MODEL=de_core_news_sm
