--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,10 +1,10 @@
 version: "3.8"
 services:
-    moomootscribe:
+    summaraizer:
         build:
             context: .
             dockerfile: Dockerfile.dev
-        container_name: moomootscribe
+        container_name: summaraizer
         user: "${HOST_UID:-1000}:${HOST_GID:-1000}"
         ports:
             - "7860:7860"
