--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,6 @@ SPACY_DATA_DIR=/app/spacy_models
 GRADIO_SERVER_NAME=0.0.0.0
 GRADIO_SERVER_PORT=7860
 GRADIO_BASE_URL=http://127.0.0.1:7860
+
+ADMIN_PASSWORD=strongSecretPassword
+SESSION_SECRET=32+charRandomString
