Remove persidio (dsgvo) analyser and spacey ai model to prepare for low ram scenario in dlc infrastructure

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@
 OPENAI_API_KEY=sk-your-openai-api-key-here
 OPENAI_API_BASE=https://chat-ai.academiccloud.de/v1
 OPENAI_DEFAULT_MODEL=gemma-3-27b-it
+WISYKI_API_URL=https://lab.dlc.sh/competence-analyser
 AUDIO_FLAC_COMPRESSION_LEVEL=10
-TRANSCRIBE_SEGMENT_SECONDS=250
+TRANSCRIBE_SEGMENT_SECONDS=170 # KISSKI only accepts max length of 180 seconds
 OPENAI_TRANSCRIBE_TEMPERATURE=0.3
 
 # spaCy Model Configuration
